--- a/styles.css
+++ b/styles.css
@@ -180,8 +180,9 @@ footer {
 
 .product-detail .button {
   display: inline-block;
+}
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
   .product-detail {
     flex-direction: column;
     align-items: center;
