--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,9 @@ header {
 
 /* Logo next to search bar */
 .logo-inline {
-  width: 60px;
+  width: 8vw;
+  min-width: 60px;
+  max-width: 140px;
   height: auto;
 }
 
