--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,8 @@ header {
 /* Profile & Cart Icons */
 .profile-dropdown, .cart-dropdown {
   display: inline-block;
+  left:auto;
+  right: 0;
   position: relative;
   margin-left: 15px;
 }
@@ -76,6 +78,8 @@ header {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 100;
   min-width: 120px;
+  max-width: 250px;
+  right: 0;
 }
 
 .dropdown-menu a {
