--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ a {
    Header and Navigation
 ------------------------------ */
 header {
-  background-color: #fccb86;
+  background-color: #fad29a;
   padding: 20px;
   text-align: center;
   position: relative;
