--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,9 @@ header {
 }
 
 .logo-inline {
-  width: auto;
-  height: auto;
-  max-height: 80px;
+  width: 100px;
+  height: 80px;
+  max-height: 100px;
 }
 
 .header-right {
